# grayscaler-openmp

./: CMakeLists.txt  README.md  benchmark.csv  diagram.py  main.c
